<resources>
    <string name="app_name">ADHDaily</string>
    <string name="btn_gotoDate">Ir a la fecha</string>
    <string name="txt_settingsTitle">Ajustes</string>
    <string name="lbl_selectDate">Fecha:</string>
    <string name="title_calendarView">General</string>
    <string name="title_dayView">Lista diaria</string>
    <string name="title_newTask">Añadir tarea</string>
    <string name="lbl_inputTaskDate">Fecha</string>
    <string name="lbl_inputTaskTime">Hora</string>
    <string name="check_AllDay">Todo el día</string>
    <string name="lbl_inputTaskTitle">Título</string>
    <string name="lbl_inputTaskDesc">Descripción</string>
    <string name="lbl_inputTaskColorTag">Color</string>
    <string name="lbl_inputTaskAddReminder">Añadir</string>
    <string name="lbl_inputTaskReminders">Recordatorios</string>
    <string name="txt_none">Ninguno</string>
    <string name="txt_doNotRepeat">No repetir</string>
    <string name="lbl_inputTaskRepeat">Repetir</string>
    <string name="btn_selectColorConfirm">Seleccionar</string>
    <string name="lbl_colorTagNone">Ninguno</string>
    <string name="lbl_colorTagBlue">Azul</string>
    <string name="lbl_colorTagGreen">Verde</string>
    <string name="lbl_colorTagPurple">Morado</string>
    <string name="lbl_colorTagYellow">Amarillo</string>
    <string name="lbl_colorTagRed">Rojo</string>
    <string name="btn_addNewTask">Crear tarea</string>
    <string name="toast_titleRequired">Título obligatorio</string>
    <string name="toast_startTimeRequired">Hora inicio obligatoria</string>
    <string name="desc_selectDateBtn">Seleccionar una fecha</string>
    <string name="toast_taskCreatedSuccess">Tarea creada con éxito</string>
    <string name="txt_taskDetailsTitle">Tarea</string>
    <string name="title_taskDetails">Detalles de la tarea</string>
    <string name="toast_taskEditedSuccess">Tarea actualizada</string>
    <string name="toast_taskDeletedSuccess">Tarea eliminada</string>
    <string name="btn_confirmDeleteTask">Confirmar</string>
    <string name="btn_cancelDeleteTask">Cancelar</string>
    <string name="txt_confirmDeleteTaskTitle">Eliminar tarea</string>
    <string name="txt_confirmDeleteTaskText">¿Seguro que desea eliminar esta tarea? Esta acción no se podrá deshacer.</string>
    <string name="txt_createReminderHint">Recordarme....</string>
    <string name="txt_reminderFormBefore">antes</string>
    <string name="timeUnitValue_min">minuto/s</string>
    <string name="timeUnitValue_hour">hora/s</string>
    <string name="timeUnitValue_day">día/s</string>
    <string name="timeUnitValue_week">semana/s</string>
    <string name="timeUnitValue_month">mes/es</string>
    <string name="toast_reminderDeletedSuccess">Recordatorio eliminado</string>
    <string name="toast_reminderCreatedSuccess">Recordatorio creado</string>
    <string name="toast_reminderEditedSuccess">Recordatorio actualizado</string>
    <string name="notifChannelNameReminders">Recordatorios</string>
    <string name="notifChannelDescReminders">Recordatorios de tareas</string>
    <string name="lbl_markCompleted">Completar</string>
    <string name="lbl_openApp">Abrir aplicación</string>
    <string name="txt_settingsFooterPrivacyPolicy">Privacy policy</string>
</resources>